# esp32_genesis_drive

./: README.md  genesis_drive.code-workspace  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_ble_fw.c  app_ble_fw.h  app_emmy_test_fw.c  app_emmy_test_fw.h  app_genesis_drive.c  app_genesis_drive.h  app_genesis_drive_wrapper.c  app_genesis_drive_wrapper.h  app_i2c_collision.c  app_i2c_collision.h  app_plant_grow.c  app_plant_grow.h  app_sms_queue_system.c  app_sms_queue_system.h  ble_helper.c  ble_helper.h  common.c  common.h  dev_sim800.c  dev_sim800.h  esp32_init.c  esp32_init.h  gpio_helper.c  gpio_helper.h  hello_world_main.c  i2c_helper.c  i2c_helper.h  lcd_display.c  lcd_display.h  log_wrapper.c  log_wrapper.h  main.c  non_volatile_mem.c  non_volatile_mem.h  oled_display_font_basic.h  oled_display_font_gldc.h  oled_display_ssd1306.c  oled_display_ssd1306.h  rest_api_handler.c  (+9 more)
