idf_component_register(SRCS 
    "main.c"
    "wifi.c"
    "common.c"
    "log_wrapper.c"
    "gpio_helper.c"
    "i2c_helper.c"
    "oled_display_ssd1306.c"
    "ble_helper.c"
    "rest_api_helper.c"
    "rest_api_handler.c"
    "uart.c"
    "non_volatile_mem.c"
    "dev_sim800.c"
    "lcd_display.c"
    "shift_register.c"
    "app_genesis_drive.c"
    "app_genesis_drive_wrapper.c"
    "app_ble_fw.c"
    "app_sms_queue_system.c"
    "app_i2c_collision.c"
    "app_emmy_test_fw.c"
    "app_plant_grow.c"
    "esp32_init.c"
    INCLUDE_DIRS "")
